chore: Apply automatic code formatting from pre-commit OpenRewrite recipes
Applied automatic formatting and improvements via OpenRewrite recipes:
- InstanceOfPatternMatch: Updated instanceof checks to pattern matching
- UseTextBlocks: Converted multi-line strings to text blocks (Java 15+)
- StringFormatted: Used String.formatted() for better readability
- AutoFormat: Applied standard code formatting
- Java version properties updated in pom.xml

All 173 tests pass after automatic formatting.